--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit==1.36.0
-numpy==1.26.4
-pandas==2.1.4
-matplotlib==3.8.4
-netCDF4==1.7.1.post2
+streamlit==1.49.1
+numpy==2.3.3
+pandas==2.3.2
+matplotlib==3.10.6
+netCDF4==1.7.2
 cftime==1.6.4.post1
+xarray==2024.3.0
+h5netcdf==1.3.0
